2009-10-26 Borut Razem <borut.razem AT siol.net>

	* doc/cdbfileformat.lyx, doc/sdccman.lyx, doc/test_suite_spec.lyx:
	  converted to LyX 1.6.4 (\lyxformat 345) format

2009-10-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/link/mcs51/lkarea.c(lnkarea2): fixed bug 2839083

2009-10-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c(decorateType): also set OCLS for PTR_OP, fixed bug 2823963
	* src/SDCCast.h: cosmetic changes
	* src/SDCCicode.c,
	* src/SDCCicode.h: moved setOClass prototype
	* support/regression/tests/bug2823963.c: new, added

2009-10-22 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/include/mcs51/p89lpc9321.h, device/include/mcs51/p89lpc9331.h,
	  device/include/mcs51/p89lpc9351.h: added

2009-10-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c(createIvalPtr),
	* src/SDCCglue.c(printIvalFuncPtr): fixed bug 2881971
	* support/regression/tests/zeropad.c: added test

2009-10-18 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: assemblers renamed to sdasxxxx

2009-10-17 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* src/mcs51/gen.c: Fixed bug 2880909
	* all.dsp, device/lib/make51lib.bat: renamed assemblers to sdasxxxx

2009-10-17 Borut Razem <borut.razem AT siol.net>

	* as/asgb/asgb.dsp, as/asgb/Makefile.in, as/asxxsrc/asexpr.c,
	  as/asxxsrc/asmain.c, as/asxxsrc/asout.c, as/asxxsrc/sdas.c,
	  as/asxxsrc/sdas.h, as/hc08/as_hc08.dsp, as/hc08/Makefile.in,
	  as/mcs51/asx8051.dsp, as/mcs51/Makefile.in, as/z80/as_z80.dsp,
	  as/z80/Makefile.in, device/lib/gbz80/Makefile.in,
	  device/lib/hc08/Makefile.in, device/lib/mcs51/Makefile.in,
	  device/lib/z80/Makefile.in, src/ds390/main.c, src/hc08/main.c,
	  src/mcs51/main.c, src/z80/main.c,
	  support/regression/ports/gbz80/spec.mk,
	  support/regression/ports/hc08/spec.mk,
	  support/regression/ports/ucz80/spec.mk,
	  support/regression/ports/z80/spec.mk:
	  assemblers renamed to sdasxxxx:
	    as-gbz80 -> sdasgb,
	    as-hc08 -> sdas6808